--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,19 +3,17 @@
     <h1 class="post-title underline">About Me</h1>
   </header><!-- .post-header -->
 
-
-
-
   <div class="post-content">
-    <p><strong>Allen Firth</strong> is a software  architect / developer from <strong>Durban, South Africa</strong>. He studied correspondence through the University of South Africa whilst at the same time working at small software development consultancies based in Durban. In <strong>2003</strong> he obtained his <strong>Bachelors Degree in Informatics</strong>.</p>
+    <p>I am an experienced software  architect / developer from <strong>Durban, South Africa</strong>. I studied correspondence through the University of South Africa
+      whilst at the same time working at small software development consultancy based in Durban. In <strong>2004</strong> I obtained my <strong>Bachelors Degree in Informatics</strong>.</p>
 
-<p>Allen spent six and a half years expanding his technical horizons in <strong>London, England</strong>, working for some of the United Kingdoms premier corporations in <strong>Law, Insurance and Finance</strong>.</p>
+<p>I spent six and a half years expanding my technical horizons in <strong>London, England</strong>, working for some of the United Kingdoms premier corporations in <strong>Law, Insurance and Finance</strong>.</p>
 
-<p>Today Allen has close to <strong>two decades</strong> worth of <em>in the trenches</em> software development experience with a broad exposure to different industries and software development methodologies.</p>
+<p>Today I have <strong>two decades</strong> worth of <em>in the trenches</em> software development experience with a broad exposure to different industries and software development methodologies.</p>
 
-<p>He now runs his own software development consultancy <a href="https://www.codestream.co.za">CodeStream</a>.</p>
+<p>I now runs my own software development consultancy <a href="https://www.codestream.co.za">CodeStream</a>.</p>
 
-<p>The core principles of his software development philosophy are <strong>simplicity</strong>, <strong>testing</strong> and <strong>automation</strong>.</p>
+<p>The core principles of my software development philosophy are <strong>simplicity</strong>, <strong>testing</strong> and <strong>automation</strong>.</p>
 
 <blockquote>
 <p>Keep it simple, Test everything, Automate always</p>
