adding codestream experience

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -11,7 +11,31 @@
 
 <p><strong>Durban, South Africa</strong></p>
 
-<p>Please see the <a href="https://www.codestream.co.za">CodeStream</a> website.</p>
+<p>In my capacity as a developer / architect through CodeStream I have worked on the following projects at <strong>The SPAR Group</strong>:</p>
+
+<div>
+<div><strong>SPAR Group - DataLake and Reporting System</strong></div>
+This project involved various disparate legacy data storage systems from which operational data was sourced and replicated into a central modernized data lake using
+<span class="underline-text">Azure SQL Server</span>. In addition, API endpoints were built using <span class="underline-text">C#</span> and <span class="underline-text">Asp.Net WebApi</span> to provide a reporting and data investigation capability to
+business on top of which rich and useful applications can be built by the business. The DataLake is now being migrated to <span class="underline-text">Azure</span> to leverage various
+cloud platform technologies and services such as <span class="underline-text">Azure Data Factory</span> and <span class="underline-text">Azure Synaspe</span>.
+</div>
+<div>
+<div style="margin-top: 10px;"><strong>SPAR Group - Store & Vendor Master Data Systems</strong></div>
+These master data applications are highly distributed across multiple core backend enterprise systems such as SAP, iSeries/AS400 and custom SQL Server databases.
+Technologies such as IBM Process Server & Integration Bus are used to co-ordinate messaging and workflow across the various backend system boundaries.
+The user interface was developed using <span class="underline-text">Angular</span> and integrates directly with numerous <span class="underline-text">.NET & SAP Api’s</span>.
+I played an integral role in co-ordinating the various development teams and managing sprint work as well as development of the user interfaces and .NET Api’s.
+</div>
+
+<div style="margin-top: 10px;"><strong>Other Client Projects</strong></div>
+<p>I've built the Back-End API's for <strong>Veridot's</strong> OEM system, enabling them to move from their legacy system to a new highly functional system for tracking the Micro-dotting of vehicles in South Africa. I also managed the migration of the solution to <span class="underline-text">Azure</span> proving <strong>Veridot</strong> with a fully managed Azure hosted solution.</p>
+<p>I've worked remotely on a live data processing system for <strong>Chelsea Football Club</strong> in the <strong>UK</strong>, recieving, analyzing and processing player GPS, acceleration and speed data being fed live into an Azure processing pipeline using <span class="underline-text">Azure EventHub, Azure Functions and Azure Sql Server</span>.</p>
+<p>I've worked remotely for <strong>CashRewards</strong> in <strong>Australia</strong> building their new Customer Coupon Management site using <span class="underline-text">Angular</span>.</p>
+<p>I've worked remotely for a <strong>PROFiltr</strong> in the <strong>UK</strong> bringing their online solution for small bookkeeping companies together with potential clients to completion using <span class="underline-text">AngualrJS, NodeJS and MongoDB</span></p>
+<p>I've provided ongoing support and further development of <strong>SMEasy</strong> (see previous poisition as CTO at SMEasy)</p>
+
+<p style="margin-top: 10px;">Please see the <a href="https://www.codestream.co.za">CodeStream</a> website for more detail.</p>
 
 <h3 id="2015---2017-cto--smeasy">2015 - 2017: CTO @ SMEasy</h3>
 
