--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1362,3 +1362,8 @@ body.has-theme-bar #masthead {
   @media only screen and (max-width: 801px) {
     body.has-theme-bar #masthead {
       top: 0; } }
+
+
+.underline-text {  text-decoration: underline;}
+
+.bold {font-weight: bold;}
