adding downloadedable cv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,9 @@
                 <li class="menu-item" routerLinkActive="current-menu-item">
                   <a routerLink="/contact/">Contact</a>
                 </li>
+                <li class="menu-item" >
+                  <a href="assets/allenfirth-cv.pdf" target="_blank">CV / Resume</a>
+                </li>
                 <li class="menu-item">
                   <a href="https://www.codestream.co.za">CodeStream</a>
                 </li>
@@ -93,7 +96,7 @@
       <!-- .site-main -->
       <footer id="colophon" class="site-footer">
         <p class="site-info">
-          &copy; All rights reserved. <a href="https://www.allenfirth.info" target="_blank" rel="noopener" >Allen Firth</a>. Hosted by <a href="https://www.codestream.co.za" target="_blank" rel="noopener">CodeStream</a>
+          &copy; All rights reserved. <a href="https://www.allenfirth.info" target="_blank" rel="noopener" >Allen Firth</a>. Hosted by <a href="https://www.codestream.co.za" target="_blank" rel="noopener">CodeStream</a> Download my <a href="assets/allenfirth-cv.pdf" target="_blank">CV / Resume</a>
         </p>
         <!-- .site-info -->
         <a id="to-top" class="to-top" href="#page"
