--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,6 +42,7 @@
       <a routerLink="/skills" class="button">Skills</a>
       <a routerLink="/experience" class="button">Experience</a>
       <a routerLink="/contact" class="button">Contact Me</a>
+      <a href="assets/allenfirth-cv.pdf" target="_blank" class="button">CV / Resume</a>
     </p>
   </div>
 </section>
