--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
     </p>
     <p>
       But as you know certificates mean little and my two decades of
-      hands on experience speak volumes and for the basis for my
+      hands on experience speak volumes and are the basis for my
       technical decision making.
     </p>
     <p class="block-cta">
