--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,13 +5,13 @@
 
   <div class="post-content">
     <p>I am an experienced software  architect / developer from <strong>Durban, South Africa</strong>. I studied correspondence through the University of South Africa
-      whilst at the same time working at small software development consultancy based in Durban. In <strong>2004</strong> I obtained my <strong>Bachelors Degree in Informatics</strong>.</p>
+      whilst at the same time working at a small software development consultancy based in Durban. In <strong>2004</strong> I obtained my <strong>Bachelors Degree in Informatics</strong>.</p>
 
-<p>I spent six and a half years expanding my technical horizons in <strong>London, England</strong>, working for some of the United Kingdoms premier corporations in <strong>Law, Insurance and Finance</strong>.</p>
+<p>I spent six and a half years expanding my technical horizons in <strong>London, England</strong>, working for some of the <strong>United Kingdoms</strong> premier corporations in <span class="underline-text">Law, Insurance and Finance</span>.</p>
 
 <p>Today I have <strong>two decades</strong> worth of <em>in the trenches</em> software development experience with a broad exposure to different industries and software development methodologies.</p>
 
-<p>I now runs my own software development consultancy <a href="https://www.codestream.co.za">CodeStream</a>.</p>
+<p>I now run my own software development consultancy <a href="https://www.codestream.co.za">CodeStream</a>.</p>
 
 <p>The core principles of my software development philosophy are <strong>simplicity</strong>, <strong>testing</strong> and <strong>automation</strong>.</p>
 
