--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -41,7 +41,7 @@ I played an integral role in co-ordinating the various development teams and man
 
 <p><strong>Durban, South Africa</strong></p>
 
-<p>Allen worked as CTO of SMEasy, coordinating and managing all technical aspects of this exciting online accounting package startup for small to medium sized enterprises. His role was multi-faceted and included the following:</p>
+<p>I worked as CTO of SMEasy, coordinating and managing all technical aspects of this exciting online accounting package startup for small to medium sized enterprises. My role was multi-faceted and included the following:</p>
 
 <ul>
 <li>Providing key technical insight to the SMEasy board in order to aid them in strategic decision making.</li>
@@ -72,7 +72,7 @@ I played an integral role in co-ordinating the various development teams and man
 
 <p><strong>System Integration / Fx / Fund Accounting / Fee Calculation</strong></p>
 
-<p>Allen worked in a geographically distributed team on systems integration of multiple disparate applications in the middle office of the worlds largest Fund of funds. The development team facilitated systems communication between various data sources and applications using a variety of request/response and publish/subscribe messaging solutions built on Oracle weblogic / MSMQ and a custom in-house messaging buses.</p>
+<p>I worked in a geographically distributed team on systems integration of multiple disparate applications in the middle office of the worlds largest Fund of funds. The development team facilitated systems communication between various data sources and applications using a variety of request/response and publish/subscribe messaging solutions built on Oracle weblogic / MSMQ and a custom in-house messaging buses.</p>
 
 <p>The team, used SCRUM to run and manage month long sprints. SCRUM teams were located in different offices and communication was paramount to successfully completing work. Part of the teams mandate was to introduce in increasing measures the principles of Agile development, increase the test coverage of the code base and strongly push the ethos of TDD.</p>
 
@@ -88,11 +88,11 @@ I played an integral role in co-ordinating the various development teams and man
 
 <p><strong>Contact &amp; event management</strong></p>
 
-<p>Allen worked on a team developing a contact and event management system for the management of business contacts and targeted communications with specific groupings of contacts about business events and full life-cycle tracking of those events. The application was developed using ASP.NET MVC and jQuery for client-side asynchronous UI updates.</p>
+<p>I worked on a team developing a contact and event management system for the management of business contacts and targeted communications with specific groupings of contacts about business events and full life-cycle tracking of those events. The application was developed using ASP.NET MVC and jQuery for client-side asynchronous UI updates.</p>
 
 <p><strong>Budgeting management tool</strong></p>
 
-<p>Allen worked as part of large team developing a budgeting application for the firms internal budgeting and cost monitoring of matters. The application was a web based tool relying on data from disparate systems from finance to firm control work management systems. Users of the system would budget costs of estimated work catering for different partners, fee-earners and other resources at different exchange rates. The budget was then eventually compared against actual outcomes of work done on a matter and various reports were available to help monitor the progress of a budget.</p>
+<p>I worked as part of large team developing a budgeting application for the firms internal budgeting and cost monitoring of matters. The application was a web based tool relying on data from disparate systems from finance to firm control work management systems. Users of the system would budget costs of estimated work catering for different partners, fee-earners and other resources at different exchange rates. The budget was then eventually compared against actual outcomes of work done on a matter and various reports were available to help monitor the progress of a budget.</p>
 
   </div><!-- .post-content -->
 </article><!-- .post -->
