--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
 
   <div class="block-content">
     <p>
-      I’ve been developing applications for close to two decades now.
+      I’ve been developing applications for over two decades now.
       The tools of my trade being
       <strong
         >C#, Javascript / Angular, relational or document databases,
@@ -28,15 +28,14 @@
     </p>
     <p>
       I’ve got a <strong>Bachelors Degree in Informatics</strong> from
-      the University of South Africa (2003) as well as being certified
+      the University of South Africa (2004) as well as being certified
       as a
       <strong>Microsoft Certified Solutions Developer</strong> since
       2000.
     </p>
     <p>
       But as you know certificates mean little and my two decades of
-      hands on experience speak volumes and are the basis for my
-      technical decision making.
+      hands on experience speak volumes for my skills and abilities.
     </p>
     <p class="block-cta">
       <a routerLink="/skills" class="button">Skills</a>
