--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -8,12 +8,12 @@
   </div><!-- .post-subtitle -->
 
   <div class="post-content">
-    <p>I’m a full-stack developer with expert level experience in databases, server-side components and client-side user interfaces.</p>
+    <p>I’m a full-stack developer with expert level experience in databases, server-side business logic processing and client-side user interfaces.</p>
     <p>At a high level, these are the tools of my trade.</p>
     <ul>
       <li>Microsoft Azure, DevOps, Apps  & Infra</li>
       <li>C# / .NET Core / Asp.NET Core</li>
-      <li>Angular / TypeScript Javascript / NodeJS</li>
+      <li>Angular / TypeScript / Javascript / NodeJS</li>
       <li>Sql Server / MongoDb</li>
       <li>Git / GitHub / BitBucket</li>
     </ul>
