--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,15 +33,12 @@
       <strong>Microsoft Certified Solutions Developer</strong> since
       2000.
     </p>
-    <p>
-      But as you know certificates mean little and my two decades of
-      hands on experience speak volumes for my skills and abilities.
-    </p>
     <p class="block-cta">
+      <a routerLink="/about" class="button">About</a>
       <a routerLink="/skills" class="button">Skills</a>
       <a routerLink="/experience" class="button">Experience</a>
-      <a routerLink="/contact" class="button">Contact Me</a>
-      <a href="assets/allenfirth-cv.pdf" target="_blank" class="button">CV / Resume</a>
+      <a routerLink="/contact" class="button">Contact</a>
+      <a href="assets/allenfirth-cv.pdf" target="_blank" class="button">CV</a>
     </p>
   </div>
 </section>
