--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -12,9 +12,9 @@
     <p>At a high level, these are the tools of my trade.</p>
     <ul>
       <li>Microsoft Azure, DevOps, Apps  & Infra</li>
-      <li>C# / .NET Core / Asp.NET Core</li>
+      <li>C# / .NET Core / Asp.NET Core / SignalR</li>
       <li>Angular / TypeScript / Javascript / NodeJS</li>
-      <li>Sql Server / MongoDb</li>
+      <li>Azure Sql Server / Azure Synapse / MongoDb</li>
       <li>Git / GitHub / BitBucket</li>
     </ul>
   </div><!-- .post-content -->
