--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -10,8 +10,8 @@
     <h2 id="currently-2017---present-owner--codestream">Currently (2017 - present): Owner @ <a href="https://www.codestream.co.za">CodeStream</a></h2>
 
 <p><strong>Durban, South Africa</strong></p>
-
-<p>In my capacity as a developer / architect through CodeStream I have worked on the following projects at <strong>The SPAR Group</strong>:</p>
+<div><strong>Anglo American - Live Exposure Reporting Tool</strong></div>
+<P>I've recently completed a <strong>fully remote</strong> role as a <strong>full stack developer</strong> building an Exposure reporting tool for <strong>Anglo American</strong> in the <strong>United Kingdom</strong> with live intraday trades using <span class="underline-text">Angular, C#, Asp.NET Core, SignalR and Azure SQL Synapse</span></P>
 
 <div>
 <div><strong>SPAR Group - DataLake and Reporting System</strong></div>
@@ -30,9 +30,9 @@ I played an integral role in co-ordinating the various development teams and man
 
 <div style="margin-top: 10px;"><strong>Other Client Projects</strong></div>
 <p>I've built the Back-End API's for <strong>Veridot's</strong> OEM system, enabling them to move from their legacy system to a new highly functional system for tracking the Micro-dotting of vehicles in South Africa. I also managed the migration of the solution to <span class="underline-text">Azure</span> proving <strong>Veridot</strong> with a fully managed Azure hosted solution.</p>
-<p>I've worked remotely on a live data processing system for <strong>Chelsea Football Club</strong> in the <strong>UK</strong>, recieving, analyzing and processing player GPS, acceleration and speed data being fed live into an Azure processing pipeline using <span class="underline-text">Azure EventHub, Azure Functions and Azure Sql Server</span>.</p>
-<p>I've worked remotely for <strong>CashRewards</strong> in <strong>Australia</strong> building their new Customer Coupon Management site using <span class="underline-text">Angular</span>.</p>
-<p>I've worked remotely for a <strong>PROFiltr</strong> in the <strong>UK</strong> bringing their online solution for small bookkeeping companies together with potential clients to completion using <span class="underline-text">AngualrJS, NodeJS and MongoDB</span></p>
+<p>I've worked <strong>remotely</strong> on a live data processing system for <strong>Chelsea Football Club</strong> in the <strong>UK</strong>, recieving, analyzing and processing player GPS, acceleration and speed data being fed live into an Azure processing pipeline using <span class="underline-text">Azure EventHub, Azure Functions and Azure Sql Server</span>.</p>
+<p>I've worked <strong>remotely</strong> for <strong>CashRewards</strong> in <strong>Australia</strong> building their new Customer Coupon Management site using <span class="underline-text">Angular</span>.</p>
+<p>I've worked <strong>remotely</strong> for a <strong>PROFiltr</strong> in the <strong>UK</strong> bringing their online solution for small bookkeeping companies together with potential clients to completion using <span class="underline-text">AngualrJS, NodeJS and MongoDB</span></p>
 <p>I've provided ongoing support and further development of <strong>SMEasy</strong> (see previous poisition as CTO at SMEasy)</p>
 
 <p style="margin-top: 10px;">Please see the <a href="https://www.codestream.co.za">CodeStream</a> website for more detail.</p>
