adding cosmosdb and react

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,9 +18,8 @@
       I’ve been developing applications for over two decades now.
       The tools of my trade being
       <strong
-        >C#, Javascript / Angular, relational or document databases,
-        Git, Microsoft Azure &amp; Azure DevOps</strong
-      >.
+        >C#, Javascript / Angular / React, relational or document databases,
+        Git, Microsoft Azure &amp; Azure DevOps</strong>.
     </p>
     <p>
       I’ve worked for small startups and I’ve worked for global
