--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -13,8 +13,8 @@
     <ul>
       <li>Microsoft Azure, DevOps, Apps  & Infra</li>
       <li>C# / .NET Core / Asp.NET Core / SignalR</li>
-      <li>Angular / TypeScript / Javascript / NodeJS</li>
-      <li>Azure Sql Server / Azure Synapse / MongoDb</li>
+      <li>Angular / React / TypeScript / Javascript / NodeJS</li>
+      <li>Azure Sql Server / Azure Synapse / Azure CosmosDb / MongoDb</li>
       <li>Git / GitHub / BitBucket</li>
     </ul>
   </div><!-- .post-content -->
