upgrade to angular 15

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,7 @@
 
   <div class="hero-text">
     <p>
-      I’m a software architect / developer with a passion for building
-      things with code.
+      I’m a full-stack software developer and architect with a passion for building things with code.
     </p>
   </div>
 </section>
@@ -14,23 +13,11 @@
   <h2 class="block-title underline">Intro</h2>
 
   <div class="block-content">
-    <p>
-      I’ve been developing applications for over two decades now.
-      The tools of my trade being
-      <strong
-        >C#, Javascript / Angular / React, relational or document databases,
-        Git, Microsoft Azure &amp; Azure DevOps</strong>.
-    </p>
+    <p>I’ve been developing applications for over two decades now.</p>
+    <p>I build with <strong>C#, Angular / React, Microsoft Azure &amp; Azure DevOps</strong></p>
     <p>
       I’ve worked for small startups and I’ve worked for global
-      multi-national corporations. As I said I like building things.
-    </p>
-    <p>
-      I’ve got a <strong>Bachelors Degree in Informatics</strong> from
-      the University of South Africa (2004) as well as being certified
-      as a
-      <strong>Microsoft Certified Solutions Developer</strong> since
-      2000.
+      multi-national corporations.
     </p>
     <p class="block-cta">
       <a routerLink="/about" class="button">About</a>
