updates to skills and experience

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -4,11 +4,10 @@
   </header><!-- .post-header -->
 
   <div class="post-subtitle">
-    This is where my current experience lies.
+    I’m a full-stack developer with expert level experience in databases, server-side business logic processing and client-side user interfaces.
   </div><!-- .post-subtitle -->
 
   <div class="post-content">
-    <p>I’m a full-stack developer with expert level experience in databases, server-side business logic processing and client-side user interfaces.</p>
     <p>At a high level, these are the tools of my trade.</p>
     <ul>
       <li>Microsoft Azure, DevOps, Apps  & Infra</li>
